.metadata/.plugins/org.eclipse.cdt.ui/calculadora.c.build.log
21:41:17 **** Incremental Build of configuration Debug for project calculadora.c ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\calculator.o" "..\\src\\calculator.c" 
..\src\calculator.c:11:5: error: conflicting types for 'getInt'
 int getInt(char mensaje[], int reintentos, int minimo, int maximo, char mensajeError[], int *pNumeroIngresado)
     ^~~~~~
In file included from ..\src\calculator.c:8:0:
..\src\calculator.h:13:5: note: previous declaration of 'getInt' was here
 int getInt(char mensaje, int reintentos, int minimo, int maximo, char mensajeError[], int *pNumeroIngresado);
     ^~~~~~

21:41:17 Build Failed. 1 errors, 0 warnings. (took 171ms)

